welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: type mismatch;
 found   : Int
 required: Boolean
	if( (a%3)){
              ^fizzBuzz:4: error: not found: value Fizz
		return Fizz;
                       ^fizzBuzz:6: error: type mismatch;
 found   : Int
 required: Boolean
	if( (a%5)){
              ^fizzBuzz:7: error: not found: value Buzz
		return Buzz;
                       ^