welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
	
	if( (a%3)){
		return Fizz;
	}
	if( (a%5)){
		return Buzz;
	}else{
		return ""+a
	}
}
